k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meriem-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meriem-app
  template:
    metadata:
      labels:
        app: meriem-app
    spec:
      containers:
        - name: meriem-app
          image: meriemdevopsacr2026.azurecr.io/meriem-app:latest
          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
