k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: meriem-app-service
spec:
  type: ClusterIP
  selector:
    app: meriem-app
  ports:
    - port: 80
      targetPort: 80
